# NetworkVisualizer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/instructions/: backend.instructions.md  frontend.instructions.md  general.instructions.md
frontend/: app.js  index.html  style.css
plan/: AGENTS.md  DECISIONS.md  PLAN.md
plan/tasks/: 01-scaffold.md  02-discovery.md  03-database.md  04-api.md  05-frontend.md  06-docker.md
src/: __init__.py
src/api/: main.py  schemas.py
src/api/routes/: admin.py  devices.py  rooms.py  scan.py  topology.py
src/db/: database.py  models.py  utils.py
src/discovery/: meraki_client.py  models.py
